--- a/13-Backend/Example 2/.env
+++ b/13-Backend/Example 2/.env
@@ -1,2 +1,3 @@
-PORT = 3000
-DATABASE_URL = mongodb://127.0.0.1:27017/hrishikeshDataBase
+PORT = 4000
+MONGODB_URL = "mongodb://127.0.0.1:27017/hrishikeshDataBase"
+JWT_SECRET = babbar
