--- a/13-Backend/Example 4 Auth and verification/package.json
+++ b/13-Backend/Example 4 Auth and verification/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authapp",
+  "name": "example-4-auth-and-verification",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.1",
+    "nodemon": "^3.1.0"
   }
 }
